--- a/package.json
+++ b/package.json
@@ -8,14 +8,21 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "author": "Suhas Nidgundi <suhasnidgundi@gmail.com>",
   "dependencies": {
+    "@auth/firebase-adapter": "^2.8.0",
+    "bootstrap": "5.3.3",
+    "firebase": "^11.4.0",
+    "firebase-admin": "^13.2.0",
+    "next": "15.2.2",
+    "next-auth": "5.0.0-beta.25",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.2.2"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
+    "@types/react": "19.0.10",
     "eslint": "^9",
-    "eslint-config-next": "15.2.2",
-    "@eslint/eslintrc": "^3"
+    "eslint-config-next": "15.2.2"
   }
 }
